force-app/main/default/objects/RT1__Recording_Registration__c/RT1__Recording_Registration__c.object-meta.xml
<CustomObject>
    <label>Recording Registration</label>
    <nameField>
        <label>Recording Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recording Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>