force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__Contact__c.field-meta.xml
<CustomField>
    <fullName>RT1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ReadyTalk Recording Playback History</relationshipLabel>
    <relationshipName>Recording_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>