force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__InviteSent__c.field-meta.xml
<CustomField>
    <fullName>RT1__InviteSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a recording registration has had an email sent to them.</description>
    <label>InviteSent</label>
    <type>Checkbox</type>
</CustomField>