force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__PlaybackDate__c.field-meta.xml
<CustomField>
    <fullName>RT1__PlaybackDate__c</fullName>
    <label>Playback Date</label>
    <type>DateTime</type>
</CustomField>