force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__PlaybackDuration__c.field-meta.xml
<CustomField>
    <fullName>RT1__PlaybackDuration__c</fullName>
    <label>Playback Duration (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>