force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__Recording__c.field-meta.xml
<CustomField>
    <fullName>RT1__Recording__c</fullName>
    <label>Recording Title</label>
    <referenceTo>RT1__Recording__c</referenceTo>
    <relationshipLabel>Recording Registrations</relationshipLabel>
    <relationshipName>Recording_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>