force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__RegistrationAnswer4__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationAnswer4__c</fullName>
    <label>Registration Answer 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>