force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__RegistrationId__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationId__c</fullName>
    <label>RegistrationId</label>
    <length>8</length>
    <type>Text</type>
</CustomField>