force-app/main/default/objects/RT1__Recording_Registration__c/fields/RT1__RegistrationQuestion2__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationQuestion2__c</fullName>
    <label>Registration Question 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>